--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,9 @@ name: Android CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master , integrate-ci-cd]
   pull_request:
-    branches: [ master ]
+    branches: [ master , integrate-ci-cd ]
 
 jobs:
   build:
