--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,7 +41,7 @@ jobs:
         run: ./gradlew testDebugUnitTest
 
       - name: Upload Debug APK
-        uses: actions/upload-artifact@3b4d180dbb9a77329c0c4302f79b64c3f6981549
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
