--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,7 +33,8 @@ jobs:
 
       - name: Grant permission to Gradle wrapper
         run: chmod +x ./gradlew
-
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug -PweatherApiKey=${{ secrets.WEATHER_API_KEY }}
       - name: Build Debug APK
         run: ./gradlew assembleDebug
 
