--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,24 +24,25 @@ jobs:
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
-          path: |
+         path: |
             ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
 
       - name: Grant permission to Gradle wrapper
         run: chmod +x ./gradlew
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug -PweatherApiKey=${{ secrets.WEATHER_API_KEY }}
 
       - name: Run Android Lint
         run: ./gradlew lintDebug
 
       - name: Run Unit Tests
         run: ./gradlew testDebugUnitTest
+
+      - name: Publish library to Maven Local
+        run: ./gradlew :icon-formatter:publish
+
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug -PweatherApiKey=${{ secrets.WEATHER_API_KEY }}
+
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
