--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,8 +24,12 @@ jobs:
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
-         path: |
+          path: |
             ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
       - name: Grant permission to Gradle wrapper
         run: chmod +x ./gradlew
