--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -43,7 +43,8 @@ jobs:
       - name: Run Unit Tests
         run: ./gradlew testDebugUnitTest
 
-
+      - name: Publish library to Maven Local
+        run: ./gradlew :icon-formatter:publish
 
       - name: Build Debug APK
         run: ./gradlew assembleDebug -PweatherApiKey=${{ secrets.WEATHER_API_KEY }}
